<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bgnew">


<ScrollView
	 android:layout_width="fill_parent" 
	 android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="vertical">

     <com.google.ads.AdView
         android:id="@+id/ad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         ads:adSize="BANNER"
         ads:adUnitId="a14fae69a4e66d4"
         ads:loadAdOnCreate="true" />
						
    <Button
        android:id="@+id/btohmischesgesetz"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:onClick="formelseitewechselnohmischesgesetz"
        android:text="@string/main_ohmschesgesetz"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button12"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="seitewechselnwiederstandundmaterial"
        android:text="@string/main_widerstandundmaterial"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btwiederstandundleitwert"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="formelseitewechselnwiederstandundleitwert"
        android:text="@string/main_widerstandundleitert"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tempwiderstand"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="tempwiederstandwechselm"
        android:text="@string/main_tempeinfluss"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btkirchhoffschesgesetz"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="seitewechselnkirchhoffschesgesetz"
        android:text="@string/main_kirchhoffschesgesetz"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btstromdichte"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="seitewechselnstromdichte"
        android:text="@string/main_stromdichte"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btstromstaerke"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="seitewechselnelstromstaerke"
        android:text="@string/main_elektrischestromstärke"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button12"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_kondensator"
        android:textStyle="bold"
        android:onClick="seitewechselnkondensator" />
    <Button
        android:id="@+id/button6"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_zugfestigkeit"
        android:textStyle="bold"
        android:onClick="seitewechselnzugfestigkeit" />

    <Button
        android:id="@+id/button7"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_leistung"
        android:textStyle="bold"
        android:onClick="seitewechselnleistung" />
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_wirkleistung"
        android:textStyle="bold"
        android:onClick="seitewechselnwirkleistung" />
     <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_leistungsdreieck"
        android:textStyle="bold"
        android:onClick="leistungsdreieckwechseln" />   
    <Button
        android:id="@+id/button11"
		android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_wirkungsgrad"
        android:textStyle="bold"
        android:onClick="seitewechselnwirkungsgrad" />

    <Button
        android:id="@+id/button8"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_serieschaltung"
        android:textStyle="bold"
        android:onClick="seitewechselnserieschaltung" />

    <Button
        android:id="@+id/button10"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_parallelschaltung"
        android:textStyle="bold"
        android:onClick="seitewechselnparallelschaltung" />

    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_galvanischeselement"
        android:textStyle="bold"
        android:onClick="seitewechselngalvanischeselement" />
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_magnetischedurchflutung"
        android:textStyle="bold"
        android:onClick="seitewechselnmagnetischedurchflutung" />
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_induktionsgesetz"
        android:textStyle="bold"
        android:onClick="seitewechselninduktionsgesetz" />
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_kosten"
        android:textStyle="bold"
        android:onClick="seitewechselnkosten" />
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_waerme"
        android:textStyle="bold"
        android:onClick="seitewechselnwaerme" />
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_frequndperiodendauer"
        android:textStyle="bold"
        android:onClick="seitewechselnfrequndperio" />
 
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_sterndreieck"
        android:textStyle="bold"
        android:onClick="seitewechselnsterndreieck" />
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_transformator"
        android:textStyle="bold"
        android:onClick="seitewechselntransformator" />
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_leistungsbestimmung"
        android:textStyle="bold"
        android:onClick="seitewechselnleistungsbestimmung" />
    
    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Dämpfung,Verstärkung,Pegel"
        android:textStyle="bold"
        android:onClick="seitepegel" />
  
           
	</LinearLayout>
	</ScrollView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/test_bg">
<ScrollView
	 android:layout_width="fill_parent" 
	 android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="vertical">    



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Formel Titel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etformeltitel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10" 
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Formel"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etformel"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Grössen (z.b U = Spannung)"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
      <EditText
        android:id="@+id/etgroessen"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Anmerkung"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etanmerkung"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10" />

    <Button
        android:id="@+id/bsenden"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_bt_senden"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>
</ScrollView>
                    

 </LinearLayout>               
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>