<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/test_bg">
	<ScrollView
	 	android:layout_width="fill_parent" 
	 	android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="vertical">	 	

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/main_tempeinfluss"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="50"
            android:text="R2= "
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_weight="50"
            android:text="R1+∆R"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="50"
            android:text="R2= "
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_weight="50"
            android:text="R1 *(1 + α * ∆θ)"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

    </TableRow>

	<TextView
	    android:id="@+id/textView8"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/groessen"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="#000000"
	    android:textStyle="bold" />

	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="5dp"
	        android:text="R1= Anfangswiderstand bei 20C(Ohm)"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000" />
  
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="R2= Endwiderstand(ohm)"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000" />
 		
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="∆R= Widerstandsänderung(Ohm)"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000" />
 	
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="∆θ= Temperaturänderung(K)"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000" />
 	
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="α= Temperaturkoeffizient(Ω/(Ω x K))"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000" />
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="αcu= 0.0041(Ω/(Ω x K))"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000" />

	 <Button
	     android:id="@+id/btfehler"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_gravity="center"
	     android:layout_marginLeft="10dp"
	     android:layout_marginRight="10dp"
	     android:layout_marginTop="10dp"
	     android:text="@string/btformelergenzen" />

	      <com.google.ads.AdView 
      	android:id="@+id/ad"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		ads:adUnitId="a14fae69a4e66d4"
		ads:loadAdOnCreate="true"
		ads:adSize="BANNER" />

 	</LinearLayout>
	</ScrollView>  	    	         
</LinearLayout>